# mosh

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/core/: agent.rs  api.rs  config.rs  mcp.rs  mod.rs  skills.rs  tasks.rs  tools.rs
src/core/prompt/: README.md  identity.md  response_format.md  task_protocol.md  tools_general.md  tools_specialized.md  work_style.md
src/tui/: app.rs  mod.rs
src/tui/components/: input_section.rs  mod.rs  status_line.rs
src/tui/pages/: main_page.rs
